--- a/package.json
+++ b/package.json
@@ -21,13 +21,17 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-elements": "^3.3.2",
     "react-native-gesture-handler": "~1.8.0",
+    "react-native-input-validator": "^1.0.12",
+    "react-native-modal": "^11.7.0",
     "react-native-paper": "^4.7.2",
+    "react-native-popup-menu": "^0.15.10",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-textinput-effects": "^0.6.1",
     "react-native-web": "~0.13.12",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "expo-secure-store": "~9.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
