--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "@ui-kitten/components": "^5.0.0",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
+    "expo-camera": "~9.1.0",
     "expo-constants": "^10.0.1",
-    "expo-image-picker": "^10.0.0",
+    "expo-image-picker": "~9.2.0",
+    "expo-secure-store": "~9.3.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -23,15 +26,16 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-input-validator": "^1.0.12",
     "react-native-modal": "^11.7.0",
+    "react-native-otp-textinput": "0.0.8",
     "react-native-paper": "^4.7.2",
     "react-native-popup-menu": "^0.15.10",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
     "react-native-textinput-effects": "^0.6.1",
     "react-native-web": "~0.13.12",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "expo-secure-store": "~9.3.0"
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
