--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "@react-navigation/stack": "^5.14.3",
     "@ui-kitten/components": "^5.0.0",
     "axios": "^0.21.1",
-    "expo": "~40.0.0",
+    "expo": "^40.0.1",
     "expo-camera": "~9.1.0",
     "expo-constants": "^10.0.1",
     "expo-image-picker": "~9.2.0",
     "expo-secure-store": "~9.3.0",
     "expo-status-bar": "~1.0.3",
+    "permission": "^1.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-bottomsheet-reanimated": "0.0.34",
     "react-native-elements": "^3.3.2",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-input-validator": "^1.0.12",
