--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "slug": "tell-mobile",
     "version": "0.1.0",
     "orientation": "portrait",
+    "description": "Tell is a public complaint reporting and managing application. Useers can report complaints using this application to relevant authorities. As this is a Beta version, please install the Expo Go application in android to launch the application. IOS application is still don't have a Beta version. Since this is a Beta version, there might be unknown bugs. We apologize for that and please make sure to inform us about the bug through our communication channel at Gitter.",
     "privacy": "public",
     "icon": "./assets/logo.png",
     "splash": {
